// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket_spacing.graphql - graphql-verify 1`] = `
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fragment Visit on HighlightedVisit
  @argumentDefinitions(count: { type: "Int", defaultValue: 20 }) {
  name
}

`;

exports[`bracket_spacing.graphql - graphql-verify 2`] = `
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fragment Visit on HighlightedVisit
  @argumentDefinitions(count: {type: "Int", defaultValue: 20}) {
  name
}

`;
